<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/btnCA"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/CA"
            android:textSize="24sp"
            
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/C"
            android:textSize="24sp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0" />

        <Button
            android:id="@+id/btnPorcentaje"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/porcentaje"
            android:textSize="24sp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0" />

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/division"
            android:textSize="24sp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/siete"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/ocho"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/nueve"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnMultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/multiplicacion"
            android:textSize="24sp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/cuatro"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/cinco"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/seis"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnResta"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/resta"
            android:textSize="24sp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/uno"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/dos"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/tres"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnSuma"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/suma"
            android:textSize="24sp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/cero"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="4"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnPunto"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="@color/white"
            android:text="@string/punto"
            android:textColor="#1DA3A5"
            android:textSize="24sp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="4"
            app:strokeColor="#1DA3A5"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:backgroundTint="#1DA3A5"
            android:text="@string/igual"
            android:textSize="24sp"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_row="4" />

    </GridLayout>
</LinearLayout>